<resources>
    <string name="app_name">The Way</string>
    <string name="menu_start">Start</string>
    <string name="menu_options">Options</string>
    <string name="button_up">▲</string>
    <string name="button_down">▼</string>
    <string name="button_left">◀</string>
    <string name="button_right">▶</string>
    <string name="volume">Music</string>
    <string name="go_home">Exit</string>
</resources>