<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/game_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/screamer"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="442dp"
            app:srcCompat="@drawable/monster" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_down"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_weight="50"
            android:backgroundTint="@color/menuButtons"
            android:text="@string/button_down"
            android:textColor="#888888"
            app:cornerRadius="20dp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button_up"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:layout_weight="50"
            android:backgroundTint="@color/menuButtons"
            android:text="@string/button_up"
            android:textColor="#888888"
            app:cornerRadius="20dp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button_left"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:layout_weight="50"
            android:backgroundTint="@color/menuButtons"
            android:text="@string/button_left"
            android:textColor="#888888"
            app:cornerRadius="20dp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button_right"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:layout_weight="50"
            android:backgroundTint="@color/menuButtons"
            android:text="@string/button_right"
            android:textColor="#888888"
            app:cornerRadius="20dp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</LinearLayout>