<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menuColor"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/menu_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:backgroundTint="@color/menuButtons"
            android:text="@string/menu_start"
            android:textAllCaps="false"
            android:textColor="#888888"
            android:textSize="24sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/button_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/menuButtons"
            android:text="@string/menu_options"
            android:textAllCaps="false"
            android:textColor="#888888"
            android:textSize="24sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/menuButtons"
            android:onClick="goHome"
            android:text="@string/go_home"
            android:textAllCaps="false"
            android:textColor="#888888"
            android:textSize="24sp"
            app:cornerRadius="20dp" />


    </LinearLayout>
</RelativeLayout>